# Combokill

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
assets/: floor.csv  poly.csv
core/: camera.hpp  file.c  keys.cpp  main.cpp  object.cpp  object.hpp
doc/: commit.md  event.md  init.md
engine/: assets.h  camera.cpp  camera.hpp  error.h  etc.h  file.c  keys.hpp  main.cpp  object.cpp  object.hpp  poly.h
physics/: hitbox.hpp
shaders/: frag.glsl  vert.glsl
src/: assets.c  assets.h  camera.cpp  camera.hpp  error.h  etc.h  keys.cpp  keys.hpp  main.cpp  matrix.cpp  object.cpp  object.hpp  poly.c  poly.h
world/: entity.hpp  scene.cpp  scene.hpp
